# sovereign-music-console

./: .album-stability-logcat.txt  .album-stability-report.txt  .device-stress-logcat.txt  .device-stress-report.txt  .download-cache-report.txt  .e2e-kanye-logcat.txt  .e2e-logcat-tv.txt  .e2e-review-kanye.txt  .e2e-ui.xml  .env.example  .fresh-mobile-play.txt  .full-playback-stress-logcat.txt  .full-playback-stress-report.json  .gitignore  .joe-rogan-rupert-lowe-online-logcat-v2.txt  .kanye-dress.json  .lock-screen-art-verify.json  .locked-screen-album-stress-logcat.txt  .locked-screen-album-stress-report.json  .locked-screen-manual-logcat.txt  .locker-playback-stress-logcat.txt  .locker-playback-stress-report.json  .melrose.json  .metro-download-logcat.txt  .mobile-play-logcat.txt  .nav-discover.xml  .nav-ex2.xml  .nav-home.xml  .nav-m2.xml  .nav-menu.xml  .nav-menu2.xml  .nav-pl2.xml  .network-playback-logcat.txt  .network-playback-report.txt  .phone-crash-now.txt  .phone-debug-logcat.txt  .phone-debug-logcat2.txt  .phone-e2e-gate.json  .phone-jre-2524-logcat.txt  .phone-jre-2524-progress.txt  (+67 more)
src-tauri/: Cargo.toml  signing.example.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: English.nsh  installer-hooks.nsh  installer-template.nsi
src-tauri/src/: cast_browser_server.rs  commands.rs  identity.rs  lib.rs  local_server.rs  main.rs
src-tauri/src/audio/: devices.rs  mod.rs  player.rs  settings.rs
src-tauri/src/infrastructure/: event_bus.rs  identity_authority.rs  mod.rs  (+3 more)
(+965 files in other folders)
