[package]
name = "sovereign-music-console"
version = "1.0.0"
description = "Sandbox Music — self-hosted music locker and discovery shell"
authors = ["Sandbox Music Contributors"]
edition = "2021"

[lib]
name = "sovereign_music_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
cpal = "0.15"
symphonia = { version = "0.5", features = ["flac", "pcm", "mp3", "vorbis", "aac", "isomp4"] }
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
wasapi = "0.13"
